--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nodemon ./server/index.js",
     "build": "webpack",
     "watch": "webpack -w",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -43,6 +43,7 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "react-test-renderer": "^15.7.0",
+    "supertest": "^6.1.1",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2"
