--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.11.11",
     "path": "^0.12.7",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -33,7 +34,7 @@
     "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "eslint-plugin-import": "^2.22.1",
@@ -43,7 +44,6 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "react-test-renderer": "^15.7.0",
-    "styled-components": "^5.2.1",
     "supertest": "^6.1.1",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
