--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nodemon ./server/index.js",
     "build": "webpack",
     "watch": "webpack -w",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "axios": "^0.21.1",
