--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "faker": "^5.1.0",
     "mongoose": "^5.11.11",
     "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "styled-components": "^5.2.1"
