--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "getData": "node ./database/seed.js",
-    "start": "nodemon ./server/index.js",
+    "getData": "node database/seed.js",
+    "start": "nodemon server/index.js",
     "build": "webpack",
     "watch": "webpack -w",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "docker-start": "node database/seed.js & webpack & node server/index.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
