--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "docker-start": "node database/seed.js & webpack & node server/index.js"
   },
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "axios": "^0.21.1",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
@@ -25,15 +32,13 @@
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.18.0",
@@ -47,8 +52,6 @@
     "nodemon": "^2.0.7",
     "react-test-renderer": "^15.7.0",
     "supertest": "^6.1.1",
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2"
   }
 }
