--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^16.14.0",
     "styled-components": "^5.2.1",
     "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.13.0",
@@ -51,7 +52,6 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "react-test-renderer": "^15.7.0",
-    "supertest": "^6.1.1",
-    "webpack-dev-server": "^3.11.2"
+    "supertest": "^6.1.1"
   }
 }
