--- a/package.json
+++ b/package.json
@@ -25,21 +25,18 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "mongoose": "^5.11.11",
-    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "styled-components": "^5.2.1",
     "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.4.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.18.0",
@@ -51,7 +48,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "react-test-renderer": "^15.7.0",
     "supertest": "^6.1.1"
   }
 }
