--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nodemon server/index.js",
     "build": "webpack",
     "watch": "webpack -w",
-    "test": "jest --coverage",
+    "test": "jest",
     "docker-start": "node database/seed.js & webpack & node server/index.js"
   },
   "dependencies": {
