--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "circle": "node server/index.js",
     "getData": "node database/seed.js",
     "start": "nodemon server/index.js",
     "build": "webpack",
