--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "babel-plugin-styled-components": "^1.12.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "csv-writer": "^1.6.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "mongoose": "^5.11.11",
+    "pg": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
