Ready for deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ coverage/
 package-lock.json
 public/bundle.js
 database/CSV
+newrelic.js
+script.js
+newrelic_agent.log
+.eslintignore
+server/.clinic
