--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "circle": "node server/index.js",
-    "docker": "node database/seed.js & webpack & node server/index.js",
+    "circle": "node server/server.js",
+    "docker": "node database/seed.js & webpack & node server/server.js",
     "generate": "node database/generate.js",
-    "start": "nodemon server/index.js",
+    "k6": "k6 run script.js",
+    "start": "nodemon server/server.js",
+    "node": "node server/server.js",
     "test": "jest",
     "watch": "webpack --watch"
   },
@@ -16,6 +18,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@newrelic/native-metrics": "^6.0.0",
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
@@ -25,6 +28,7 @@
     "csv-writer": "^1.6.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "newrelic": "^7.1.1",
     "pg": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
