--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "scripts": {
     "circle": "node server/server.js",
-    "docker": "node database/seed.js & webpack & node server/server.js",
+    "docker": "webpack & NODE_ENV=production node server/server.js",
     "generate": "node database/generate.js",
     "k6": "k6 run script.js",
     "start": "nodemon server/server.js",
@@ -18,7 +18,6 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
-    "@newrelic/native-metrics": "^6.0.0",
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
