Update package json with more information.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+  "name": "apex-carousel",
+  "description": "## Similar Rental Listing Carousel",
+  "version": "1.0.0",
+  "main": "./client/index.jsx",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stevekriz/Apex-Carousel.git"
+  },
+  "author": "Steve Kriz",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stevekriz/Apex-Carousel/issues"
+  },
+  "homepage": "https://github.com/stevekriz/Apex-Carousel#readme",
   "engines": {
     "node": ">=6.13.0"
   },
@@ -40,7 +54,7 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
