Update packages, fix CSV generators and schema.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: '3.7'
 services:
   db:
     image: postgres:latest
@@ -11,7 +11,7 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - '5432:5432'
   pgadmin:
     image: dpage/pgadmin4:latest
     restart: always
@@ -20,11 +20,11 @@ services:
       PGADMIN_DEFAULT_PASSWORD: secret
       PGADMIN_LISTEN_PORT: 80
     ports:
-      - "8080:80"
+      - '8080:80'
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     links:
-      - "db:pgsql-server"
+      - 'db:pgsql-server'
 volumes:
   db-data:
   pgadmin-data:
