--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
     "docker": "webpack & NODE_ENV=production node server/server.js",
     "generate": "node database/generate.js",
     "k6": "k6 run script.js",
-    "start": "nodemon server/server.js",
+    "start": "npm run open && nodemon server/server.js",
+    "open": "open http://localhost:3000/1",
     "node": "node server/server.js",
     "test": "jest",
     "watch": "webpack --watch"
   },
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/runtime": "^7.14.0",
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
@@ -40,28 +41,28 @@
     "compression": "^1.7.4",
     "csv-writer": "^1.6.0",
     "express": "^4.17.1",
-    "faker": "^5.1.0",
-    "pg": "^8.5.1",
+    "faker": "^5.5.3",
+    "pg": "^8.6.0",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "styled-components": "^5.2.1",
-    "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
   },
   "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^7.18.0",
+    "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
-    "newrelic": "^7.1.1",
+    "newrelic": "^7.4.0",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.1"
+    "supertest": "^6.1.3"
   }
 }
